<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="#32A5CF"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image"
            android:layout_width="121dp"
            android:layout_height="145dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/pasirputih"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titlee"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="24dp"
            android:maxLines="2"
            android:text="@string/title"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/circle_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/locationname"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toEndOf="@+id/circle_image"
            app:layout_constraintTop_toBottomOf="@+id/titlee" />

        <TextView
            android:id="@+id/contentLocation"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="8dp"
            android:maxLines="6"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="10dp"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/circle_image"
            app:layout_constraintTop_toBottomOf="@+id/location" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>